# ActivityTracker

./: .pre-commit-config.yaml  .secrets.baseline  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
dashboard/: error.html  index.html
docs/: FILES_OVERVIEW.md  GITHUB_SECRETS_QUICK_REFERENCE.md  GITHUB_SECRETS_SETUP.md
docs/policies/: README.md  github-permissions-policy.json  github-trust-policy.json
infrastructure/: samconfig.toml  template.yaml
infrastructure/.aws-sam/: build.toml
scripts/: manual-iam-setup.sh  setup-github-oidc.sh
src/: requirements.txt
src/activitytracker/: __init__.py
src/activitytracker/lambdas/: __init__.py  api_handler.py  sms_processor.py
src/activitytracker/models/: __init__.py  activity.py  sms.py
src/activitytracker/services/: __init__.py  activity_service.py  dynamodb_service.py  pinpoint_service.py  sms_parsing_service.py
src/activitytracker/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_models.py  test_sms_parsing.py
